# madr

./: pyproject.toml
src/: app.py
tests/: test_app.py
